--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,20 @@
     <title>test-react</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <style>
+      .alert{
+        color: red;
+      }
+
+      .valid{
+        background: #cfc;
+      }
+
+      .invalid{
+        background: #fcc;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
