--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <style>
+      .label{
+        display: inline-block;
+        width: 200px
+      }
+
       .alert{
         color: red;
       }
